--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,8 @@
     "noImplicitThis": true,
     "noImplicitAny": true,
     "strict": true,
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
-    "resolvePackageJsonExports": true,
+    "module": "CommonJS",
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "isolatedModules": true,
     "declaration": true,
