--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
-    "@prisma/client": "^7.3.0",
+    "@prisma/client": "^6.19.2",
     "joi": "^18.0.2",
     "pg": "^8.17.2",
     "reflect-metadata": "^0.2.2",
@@ -49,6 +49,7 @@
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
+    "dotenv": "^17.2.3",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.5",
@@ -57,7 +58,7 @@
     "jest": "^30.0.0",
     "lint-staged": "^16.2.7",
     "prettier": "^3.8.1",
-    "prisma": "^7.3.0",
+    "prisma": "^6.19.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
